--- a/SchoolAPI/nlog.config
+++ b/SchoolAPI/nlog.config
@@ -3,15 +3,15 @@
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       autoReload="true"
       internalLogLevel="Trace"
-      internalLogFile="C:\Users\keith\Source\Repos\kaw393939\SchoolAPI\Logs\Logsinternallog.txt">
+      internalLogFile="E:\IS421_New\API\Module5\Logs\Logsinternallog.txt">
 
-  <targets>
-    <target name="logfile" xsi:type="File"
-            fileName="C:\Users\keith\Source\Repos\kaw393939\SchoolAPI\Logs\${shortdate}_logfile.txt"
-            layout="${longdate} ${level:uppercase=true} ${message}"/>
-  </targets>
+	<targets>
+		<target name="logfile" xsi:type="File"
+		        fileName="E:\IS421_New\API\Module5\Logs\${shortdate}_logfile.txt"
+		        layout="${longdate} ${level:uppercase=true} ${message}"/>
+	</targets>
 
-  <rules>
-    <logger name="*" minlevel="Debug" writeTo="logfile" />
-  </rules>
+	<rules>
+		<logger name="*" minlevel="Debug" writeTo="logfile" />
+	</rules>
 </nlog>
