--- a/SchoolAPI/appsettings.json
+++ b/SchoolAPI/appsettings.json
@@ -1,13 +1,19 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
-  },
-  "ConnectionStrings": {
-    "sqlConnection": "server=(localdb)\\mssqllocaldb; database=SchoolAPI; Integrated Security=true"
-  },
-  "AllowedHosts": "*"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft": "Warning",
+            "Microsoft.Hosting.Lifetime": "Information"
+        }
+    },
+    "JwtSettings": {
+        "validIssuer": "SchoolAPI",
+        "validAudience": "https://localhost:50510",
+        "expires": 5
+    },
+    "ConnectionStrings": {
+        "sqlConnection": "server=(localdb)\\mssqllocaldb; database=SchoolAPI; Integrated Security=true"
+    },
+
+    "AllowedHosts": "*"
 }
